--- a/LAB3.Rmd
+++ b/LAB3.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Lab 3: Age-structured populations"
 author: "NRES 470/670"
-date: "Spring 2020"
+date: "Spring 2021"
 output: 
   html_document: 
     theme: spacelab
@@ -33,9 +33,9 @@ Let's start with some definitions- population ecology, and life tables in partic
 
 **Birth rate, b(x):** Average number of offspring produced by an individual in age category x (per-capita birth rate for a given age). NOTE: this parameter is sometimes called m(x) for "maternity"
 
-**Survivorship, l(x):** $l(x) = \frac{S_x}{S_0}  \qquad \text{(Eq. 1)}$ , where $S_x$ is the number of survivors from the original cohort at year $x$       
+**Survivorship, l(x):** $l(x) = \frac{S_x}{S_0}  \qquad \text{(Eq. 1)}$ , where $S_x$ is the number of survivors from the original cohort at year $x$. Survivorship represents the fraction of the cohort that is expected to survive to a given age.        
 
-**Survival rate, g(x):** $g(x) = \frac{S_{x+1}}{S_x}  \qquad \text{(Eq. 2)}$ , where $S_x$ is the number of survivors from the original cohort at year $x$ (per-capita survival rate at age x)
+**Survival rate, g(x):** $g(x) = \frac{S_{x+1}}{S_x}  \qquad \text{(Eq. 2)}$ , where $S_x$ is the number of survivors from the original cohort at year $x$ (per-capita survival rate at age x). Survival rate is the probability of survival from age x to age (x+1).
 
 **Lifetime reproductive potential:** $R_0 = \sum_{x=0}^k l(x)\cdot b(x)  \qquad \text{(Eq. 3)}$, where $k$ is the maximum possible age. Lifetime reproductive potential is the average number of female offspring produced per female over her entire lifetime.     
 
@@ -43,13 +43,13 @@ Let's start with some definitions- population ecology, and life tables in partic
 
 **Q**: why is the above estimate for life expectancy (LE) *approximate* and not exact? Is it likely to be biased or unbiased?          
 
-**Generation time** is defined as the _Average parental age (at birth) for all the offspring produced by a cohort_. This can be computed as: $G = \frac{\sum_{x=0}^{k}l(x)\cdot b(x)\cdot x}{\sum_{x=0}^{k}l(x)\cdot b(x)}  \qquad \text{(Eq. 5)}$
+**Generation time** is defined as the _Average age of the parents within a cohort (for all offspring born to the cohort, record the age of the mom when she gave birth and then take the average of all these ages!)_. This can be computed as: $G = \frac{\sum_{x=0}^{k}l(x)\cdot b(x)\cdot x}{\sum_{x=0}^{k}l(x)\cdot b(x)}  \qquad \text{(Eq. 5)}$
 
 **Intrinsic rate of growth,** $r$ is defined (to a first-order approximation) as: $r = \frac{ln(R_0)}{G}  \qquad \text{(Eq. 6)}$
 
 NOTE: the Gotelli book describes a more exact way to compute the intrinsic rate of growth from life tables, called the *Euler method*.      
 
-One more concept I want to introduce here is **reproductive value**, or V(x). This represents the expected future reproductive output of an individual of age x, *discounted by the intrinsic rate of growth*: $V(x) = \frac{e^{rx}}{l_x} \cdot \sum_{y=x+1}^{k}e^{-ry}l_yb_y   \qquad \text{(Eq. 7)}$.  Different individuals in a population tend to have different "value" in terms of contributing to future generations. Caswell (2001) said "The amount of future reproduction, the probability of surviving to realize it, and the time required for the offspring to be produced all enter into the reproductive value of an age-class". Knowing something about the relative "value" of different individuals in a population can help managers decide which individuals to translocate, or to harvest, or cull from a population. Therefore, reproductive value is critical for applied population ecology! Reproductive Value also factors heavily in evolutionary studies and life history theory.  
+One more concept I want to introduce here is **reproductive value**, or V(x). This represents the expected future reproductive output of an individual of age x, *adjusted for the intrinsic rate of growth*: $V(x) = \frac{e^{rx}}{l_x} \cdot \sum_{y=x+1}^{k}e^{-ry}l_yb_y   \qquad \text{(Eq. 7)}$.  Different individuals in a population tend to have different "value" in terms of contributing to future generations. Caswell (2001) said "The amount of future reproduction, the probability of surviving to realize it, and the time required for the offspring to be produced all enter into the reproductive value of an age-class". Knowing something about the relative "value" of different individuals in a population can help managers decide which individuals to translocate, or to harvest, or cull from a population. Therefore, reproductive value is critical for applied population ecology! Reproductive Value also factors heavily in evolutionary studies and life history theory.  
 
 **Q:** Why is the reproductive value discounted by the population growth rate??    
 
@@ -59,13 +59,13 @@ One more concept I want to introduce here is **reproductive value**, or V(x). Th
 
 Let's imagine that we are following a *cohort* of reintroduced Chatham Island robins on a small island through time. 
 
-- First, we establish artificial nests and place 350 captive-laid eggs in them.      
+- First, we establish artificial nests and place 400 captive-laid eggs in them.      
 - All individuals are given a unique marking as soon as they hatch (hatching is 100% successful!). These markings are permanent and not affected by tag loss!        
 - We visit the island once per year, and count all the female individuals with tags who still exist in the population. We can assume that if the individual is alive then we will observe it (perfect detection!). If we do not see the individual we know with certainty that it is dead!     
-- We record the following numbers of robins over 5 years revisiting the island (starting with 350 at year 0): 50, 25, 10, 2, and 0.
-- We record the following per-capita reproductive rates for each age: 0, 5.2, 5.5, 4.7, 3.3, and 0        
+- We record the following numbers of robins over 5 years revisiting the island (starting with 400 at year 0): 85, 40, 31, 5, and 0.
+- We record the following per-capita reproductive rates for each age: 0, 2.1, 5.8, 4.5, 3.3, and 0        
 
-You can load these data in [this CSV file](life_table2.csv). It should look something like this:
+You can load these data in [this file](life_table2.xlsx). It should look something like this:
 
 ```{r include=FALSE}
 lifetable <- read.csv("life_table2.csv")
@@ -78,7 +78,7 @@ knitr::kable(lifetable,caption="",col.names = c("x","S(x)","b(x)"))
 
 ### QUESTIONS, Exercise 1 (basic life tables):
 
-1a. Plot the survivorship curve (survivorship over age) in two ways: (1) raw survivorship vs. age, and (2) log (base 10) transformed survivorship vs. age (this is the "correct" way!). Does this population most closely resemble type I, II, or III survivorship? You only need to include the log-tranformed figure in your submitted response. Why do you need to log-transform the survivorship values in order to properly classify this population as type I, II or III? [HINT: would you be able to distinguish type II and III survivorship curves if you didn't log-transform the y axis?] 
+1a. Plot the survivorship curve (survivorship over age) in two ways: (1) raw survivorship vs. age, and (2) log (base 10) transformed survivorship vs. age (this is the "correct" way!). Does this population most closely resemble type I, II, or III survivorship? You only need to include the log-transformed figure in your submitted response. Why do you need to log-transform the survivorship values in order to properly classify this population as type I, II or III? [HINT: would you be able to distinguish type II and III survivorship curves if you didn't log-transform the y axis?]. Please refer to the 'age-structured populations' lecture page for more information on survivorship curves. 
 
 1b. What is the lifetime reproductive potential, $R_0$ for this population? Based on your estimate of $R_0$ is this population growing, declining or stable? What happens to $R_0$ if "age 1" individuals do not reproduce -- that is, if b(1) is set to zero?   
 
@@ -86,7 +86,7 @@ knitr::kable(lifetable,caption="",col.names = c("x","S(x)","b(x)"))
 
 1d. What is the reproductive value($V$) for each age (x) in this population? Which age has the highest reproductive value? If you were to remove some of this population to translocate to another island (to start a new population), why might you select individuals at this age (that is, the age with highest reproductive value)?  
 
-1e. Are the vital rates (e.g., b(x) or g(x)) in this population **Density-dependent**? If so, explain your reasoning. If not, explain what additional information you would need to evaluate density-dependence in this population.
+1e. Are the per-capita vital rates (e.g., b(x) or g(x)) in this population **Density-dependent** (do they increase or decrease as the population density changes?? If so, explain your reasoning. If not, explain what additional information you would need to evaluate density-dependence in this population.
 
 
 ## Exercise 2: another life table analysis
@@ -120,21 +120,21 @@ Let's build an age-structured model from scratch in InsightMaker. To do this, yo
 
 2. Make three new stocks: *Age 1*, *Age 2* and *Age 3*. 
 
-3. Make a new flow (flow in) called *Recruitment*. This should represent new *Age 1* individuals. We will ignore immigration for now, so new recruiment into the "Age 1" stock is the only way new individuals can be added to the population. We will assume that *Age 2* and *Age 3* are the only reproductively active ages. Therefore, draw links from *Age 2* and *Age 3* to *Recruitment*. 
+3. Make a new flow (flow in) called *Births*. This should represent new *Age 1* individuals. We will ignore immigration for now, so new additions into the "Age 1" stock is the only way new individuals can be added to the population. We will assume that *Age 2* and *Age 3* are the only reproductively active ages. Therefore, draw links from *Age 2* and *Age 3* to *Births*. 
 
-4. Make new flows from _Age 1 to Age 2_ and from _Age 2 to Age 3_, called *Transition to Age 2* and *Transition to Age 3*, respectively. These flows represent **growth**, or advancement from *Age 1* to *Age 2* is dependent on the number of individuals in *Age 1*. Therefore, draw a link from *Age 1* to *Transition to Age 2*. Do the same for *Transition to Age 3*. 
+4. Make new flows from _Age 1 to Age 2_ and from _Age 2 to Age 3_, called *Transition to Age 2* and *Transition to Age 3*, respectively. These flows represent **growth**, or advancement from *Age 1* to *Age 2* and from *Age 2* to *Age 3*.
 
-5. Make three new flows representing, emerging respectively from each stock and called *Age 1 mortality*, *Age 2 mortality*, and *Age 3 mortality*. The total number of deaths is dependent on the numbers in each stock, so draw links from each stock to the respective *mortality* outflow.  
+5. Make three new flows representing, emerging respectively from each stock and called *Age 1 mortality*, *Age 2 mortality*, and *Age 3 mortality*.   
 
-Your new insight should look something like this: 
+Your new insight should look something like this (but the flow into Age 1 can be called 'Births' rather than 'Recruitment): 
 
 ![](IM7.jpg)
 
-NOTE: you don't need links from flows to connected stocks. 
+NOTE: you don't need links from flows to connected stocks (they are already connected so they don't need a link!)- but you are welcome to add these links if it helps you! 
 
 6. Parameterize your new age-structured population!
-    6a. For recruitment, make new variables called *Recruitment rate, age 2* and *Recruitment rate, age 3*, representing the per-capita recruitment rate for age 2 and age 3, respectively. Draw links from these variables to *Recruitment*, and set these variables at 1.1 and 1.8, respectively. Click on the equation editor for *Recruitment* and set the equation appropriately (see questions below)
-    6b. For the transitions, make new variables representing the per-capita transition rates, called *Transition rate, Age 1 to 2* and *Transition rate, Age 2 to 3*. Draw links to the appropriate flows, and set these rates at 0.4 and 0.3, respectively. NOTE: these transition rates could also be called "survival rates"    
+    6a. For births, make new variables called *Birth rate, age 2* and *Birth rate, age 3*, representing the per-capita reproductive rate for age 2 and age 3, respectively. Draw links from these variables to *Births*, and set these variables at 1.2 and 1.7, respectively. Click on the equation editor for *Births* and set the equation appropriately (see questions below)
+    6b. For the transitions, make new variables representing the per-capita transition rates, called *Transition rate, Age 1 to 2* and *Transition rate, Age 2 to 3*. Draw links to the appropriate flows, and set these rates at 0.5 and 0.3, respectively. NOTE: these transition rates could also be called "survival rates"    
     6c. For the mortality rates, note that all individuals in the *Age 1* stock must either transition to *Age 2* or die (mortality rates are 1 minus the corresponding transition rate). In addition, all individuals in the *Age 3* stock must die- there is no *Age 4* class! Now click on the equation editors for the mortality rates, and specify the mortality rates appropriately. 
 
 7. Explore the model- make sure you understand how it works! 
@@ -142,29 +142,29 @@ NOTE: you don't need links from flows to connected stocks.
 
 ### QUESTIONS, Exercise 3 (age-structured model in InsightMaker):
 
-3a. What is the equation for *Recruitment* in the above model? Copy and paste your equation from InsightMaker. Now explain this equation in plain English!
+3a. What is the equation for *Births* in the above model (flow into the 'Age 1' stock)? Copy and paste your equation from InsightMaker. Now explain this equation in plain English!
 
 3b. What is the equation for *Age 1 Mortality* in the above model? Copy and paste the equation from InsightMaker. Now explain this equation in plain English! What about *Age 3 mortality*? 
 
 3c. Initialize the population abundances (Age 1, Age2, and Age 3 initial abundances) so that the population consists of only individuals in the first (*Age 1*) age class (e.g., 100 individuals in Age 1, no individuals in the other age classes). How do the population dynamics at the beginning of the simulation differ from the dynamics at the end of the simulation?  
 
-3d. Can you tweak the initial abundances so that the population exhibits smooth exponential growth/decline for all three age classes? What is the **Stable Age Distribution** for this population? Does the stable age distribution change if you change the vital rates (recruitment rates, transition rates etc.)? When you are done, please return all population vital rates to their original specifications. 
+3d. Can you tweak the initial abundances so that the population exhibits smooth growth or decline for all three age classes? This distribution is called the **Stable Age Distribution**. What is the approximate **Stable Age Distribution** for this population (fraction of individuals in each stage)? Does the stable age distribution change if you change the vital rates (birth rates, transition rates etc.)? Try changing one of the vital rates and seeing if the stable age distribution changes. Describe what you changed and how/if the stable age distribution changed. When you are done, please return all population vital rates to their original specifications. 
 
 3e. Is this a growing or declining population (make sure you use the originally specified vital rates)? Imagine you could enact a predator-control program and reduce the mortality of *Age 1* individuals. How much would you have to reduce mortality (i.e., increase the proportion transitioning from Age 1 to age 2) of this age class to make a growing population? What about *Age 2* mortality -- how much would you have to reduce mortality of this age class (increase the proportion transitioning from Age 2 and Age 3) to make a growing population? 
     
 
 ## Exercise 4: more complex age-structured models in InsightMaker!
 
-Try to implement the following model (adding onto the previous age-structured model in InsightMaker). _If the total population (all three age classes combined!) exceeds 75 individuals, then recruitment rates drop to 25% of normal rates._ 
+Try to implement the following model (adding onto the previous age-structured model in InsightMaker). _If the total population (all three age classes combined!) exceeds 75 individuals, then reproduction rates drop to 25% of normal rates._ 
 
-4a. Please provide your full InsightMaker model (copy URL in the appropriate place in WebCampus).   
+4a. Please provide your full InsightMaker model (copy URL in the appropriate place in Top Hat).   
     
-4b. Change the Age 1 mortality rate to 0.3 (i.e., change the survival/transition rate to 0.7). Run the simulation starting with 75 individuals, all in Age class 1. What happens? Is this a **stochastic** model (different results every time you run the model, even with the same initial conditions)? If not, why does the population fluctuate back and forth as if it had a random component?  
+4b. Change the Age 1 survival rate to 0.7 (i.e., mortality drops to 30%). Run the simulation starting with 75 individuals, all in Age class 1. Describe the resulting population dynamics. Is this a **random (stochastic)** model (different results every time you run the model, even with the same initial conditions)? If so, explain how you determined that this model is random/stochastic. If not, please speculate on why the population fluctuates back and forth!  
 
 
 ##Checklist for Lab 3 completion
 
-* Please type your responses into one Word document and submit _using WebCampus_!
+* Please type your responses into one Word document and submit _using Top Hat_!
 
 ***Due Feb. 28 at midnight.***
 
