--- a/LAB3.Rmd
+++ b/LAB3.Rmd
@@ -166,7 +166,7 @@ Try to implement the following model (adding onto the previous age-structured mo
 
 * Please type your responses into one Word document and submit _using Top Hat_!
 
-***Due Feb. 28 at midnight.***
+***Due March 5 at 11:55pm.***
 
 *  Word document with short answers
     +  **Exercise 1**
