--- a/LAB2.Rmd
+++ b/LAB2.Rmd
@@ -219,7 +219,7 @@ Your lab answers and pertinent figures, tables and InsightMaker links (make sure
 
 ***Due Feb. 14 at midnight***
 
-*  Word document with short answers
+*  Top Hat short answers
     +  **Exercise 1**
         -  *Short answer (1a.)*   
         -  *Short answer (1b.)*   
