--- a/LECTURE6.Rmd
+++ b/LECTURE6.Rmd
@@ -92,7 +92,7 @@ The term $l(x)$ represents the _proportion of the cohort surviving from age 0 to
 
 The term $g(x)$ represents the _proportion surviving from age x to age x+1_. This is called **survival rate** 
 
-### Types of survivorship curveys...
+### Types of survivorship curves...
 
 There are three main types of survivorship curves (also called survivorship schedules), classified as **Type I**, **Type II**, and **Type III**. 
 
