final project page update

--- a/FINAL_PROJECTS.Rmd
+++ b/FINAL_PROJECTS.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Final projects!"
 author: "NRES 470/670"
-date: "Spring 2020"
+date: "Spring 2021"
 output: 
   html_document: 
     theme: spacelab
@@ -31,12 +31,12 @@ Students will work in groups of ~3-4 people to perform a population viability an
 
 ## Timeline
 
-- **PROPOSAL:** Due Mon March 9!
-- **INITIAL PVA** Due Fri April 10: description of how your PVA model works and where the parameter estimates come from.
-- **SEND DRAFT FOR PEER REVIEW** Due April 21 by midnight (for peer review on April 24)
-- **DRAFT FINAL PAPER:** Due Mon April 27
-- **FINAL FINAL PAPER:** Due Wed May 13
-- **FINAL PRESENTATIONS:** Fri Apr 24 and May 1 in lab!
+- **PROPOSAL:** Due Fri March 12!
+- **INITIAL PVA** Due Fri April 9: description of how your PVA model works and where the parameter estimates come from.
+- **SEND DRAFT FOR PEER REVIEW** Due April 19 by midnight (for peer review on April 23)
+- **DRAFT FINAL PAPER:** Due Wed April 28
+- **FINAL FINAL PAPER:** Due Wed May 12
+- **FINAL PRESENTATIONS:** Fri Apr 23 and Fri April 30 in lab!
 
 Remember that the semester will get crazy at the end (including for your instructors). Plan ahead! 
 
@@ -45,7 +45,7 @@ Remember that the semester will get crazy at the end (including for your instruc
 Your project proposal (approx 1 pg) will consist of:  
 
 1. **Title**: should indicate what species you are modeling, and at least hint at what question will be addressed   
-2. **Project participants**: provide names of all participants (3-4, max of 5).   
+2. **Project participants**: provide names of all participants (3-5).   
 3. **Research question(s)**: Provide one or more testable and management-relevant questions that you plan to address using your population model. 
 4. **Project rationale**: Describe the rationale for choosing this species and management/conservation question. Be as specific as possible! Convince your instructors that your project is **interesting**!    
 5. **Data sources**: Describe one or more data/information sources you plan to use to guide PVA construction and parameterization (we want to make sure your project is **possible**!)  
