--- a/LECTURE7.Rmd
+++ b/LECTURE7.Rmd
@@ -40,7 +40,7 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 
 **what** The exam will cover:
 
-- All material in Chapters 1-3 of the Gotelli book *including basic matrix population modeling concepts*.   
+- All material in Chapters 1-3 of the Gotelli book *including matrix population modeling concepts*.   
 - All material covered in lectures up to and including this lecture on matrix population models.   
 - All material covered in labs 1-4.    
 - Ch. 1 of "Beyond Connecting the Dots" (basic systems thinking and stock-flow modeling, concepts of feedbacks and equilibria)
