--- a/LAB4.Rmd
+++ b/LAB4.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Lab 4: Matrix population models"
 author: "NRES 470/670"
-date: "Spring 2020"
+date: "Spring 2021"
 output: 
   html_document: 
     theme: spacelab
@@ -32,7 +32,7 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 
 ```
 
-In this lab we will get back to age-structured populations: specifically, we will get familiar with **matrix projection models**! Rememeber that while matrix population models may look complicated, they are just a fancy, age/stage structured version of basic (discrete) exponential growth ($N_{t+1} = N_t \cdot \lambda$)!
+In this lab we will get back to age-structured populations: specifically, we will get familiar with **matrix projection models**! Remember that while matrix population models may look complicated, they are just a fancy, age/stage structured version of basic discrete exponential growth ($N_{t+1} = N_t \cdot \lambda$)!
 
 ## Mathematics of matrix population models: 
 
@@ -62,9 +62,9 @@ In a stage-based matrix model, individuals can survive in one of two ways- they 
 
 NOTE: _fecundity *F* in a stage transition matrix is NOT the same thing as age-specific birth rate *b(x)*_, $b$. What's the difference?
 
-Birth rate $b_t$ from life tables is the _per-capita rate of offspring_ for age $t$ individuals. We can think of this as the number of offspring produced per female at the moment they reach $t$ years of age.   
+Birth rate $b_t$ from life tables is the _per-capita rate of offspring_ for age $t$ individuals (individuals that are exactly age t). We can think of this as the number of offspring produced per female at the moment they reach $t$ years of age.   
 
-Fecundity, $F_s$, is the _per-capita rate by which individuals that were in stage $s$ at time $t$ contribute new offspring to the population at time $t+1$. Sounds pretty similar, right? What's the difference?? Well, the difference is exactly *one time step* (which in our example was one year)!
+Fecundity, $F_s$, is the per-capita rate by which individuals that were in stage $s$ at time $t$ contribute new offspring to the population at time $t+1$. Sounds pretty similar, right? What's the difference?? Well, the difference is exactly *one time step* (which is typically one year)!
 
 That is, Fecundity $F_s$ also takes into account the *survival rate* to the next time step (e.g., $P_{1 \rightarrow 2}$)!! For an adult of stage $s$ to contribute to the next generation, _it must first survive to the next time step_ before it can reproduce!.
 
@@ -239,14 +239,16 @@ lifetable
 
 ```
 
-1a. Translate the above *life table* into a five-age-class transition matrix. In your written lab report, provide the transition matrix and describe the formulae used to compute the following two elements: (1) row 1 column 4 and (2) row 4 column 3. This is a bit harder than it sounds! 
+1a. Translate the above *life table* into a five-age-class transition matrix (age class 0 to age class 4). In your written lab report, provide the transition matrix and describe the formulae used to compute the following two elements: (1) row 1 column 4 and (2) row 4 column 3. This is a bit harder than it sounds! 
 
 Keep the following points in mind: 
 
-- Individuals are in "age class 1" if they are between the ages of 0 and 1. They transition to "age-class 2" ($P_{1 \rightarrow 2}$) if they survive to enter their second year of life (at which point they are now entering age class two!).     
-- For individuals of "Age class 1" to contribute new offpring (individuals of age-class 1) to the population in the next time step ($F_1$), they have to survive their first year of life ($P_{1 \rightarrow 2}$) AND produce offspring when they are exactly 1 year of age (which they do at the rate of $b(1)$ -- the birth rate at age 1).    
-- Use five age classes for your transition matrix. However, individuals in their fifth year of life have zero survival (you can't go past your fifth year of life in this model) and zero fecundity (if there are no individuals left, how can they reproduce!)      
-- No individual ever stays in the same age-class two time steps in a row- they either transition to the next age class or they die (this simple type of matrix model is called a **Leslie Matrix** model).          
+- Individuals are in the "age 0" stage if they are between the ages of 0 and 1. They transition to the "age 1" stage ($P_{0 \rightarrow 1}$) if they survive to age 1 (thereby entering their second year of life).     
+- For individuals of the "age 0" class to contribute new offspring to the population in the next time step ($F_0$), they have to survive their first year of life ($P_{0 \rightarrow 1}$) AND produce offspring when they are exactly 1 year of age (which they do at the rate of $b(1)$ -- the birth rate at age 1).    
+- Use five age classes for your transition matrix (age class 0 through 4). Individuals in the final age class (age class 4) have zero survival (you can't survive to age 5) and zero fecundity (if there are no individuals left at age 5, how can they reproduce!)      
+- No individual ever stays in the same age-class two time steps in a row- they either transition to the next age class or they die (this simple type of matrix model is called a **Leslie Matrix** model).   
+
+NOTE: Gotelli uses the term 'age class 1' to refer to individuals in their first year of life and 'age class 2' for individuals in their second year of life, but I think it's easier to think of this as age class 0, age class 1, etc...
 
 1b. Use R ('popbio' package) to compute the finite rate of growth for the population ($\lambda$). Is this a growing or declining population? Show your R code (just copy and paste the relevant R code into your lab write-up)!   
 
@@ -267,13 +269,13 @@ Return to the InsightMaker model you created in Lab 3 (exercise 3 -- that is, a 
 
 Make sure the parameters are at the original values specified in Exercise 3 of Lab 3 (before altering mortality rates as part of lab 3 question 3e). As a reminder, here they are again:
 
-- For recruitment, set *Recruitment rate, age 2* at 1.1 and *Recruitment rate, age 3* at 1.8.    
-- For transition rates, set *Transition rate, Age 1 to 2* at 0.4 and *Transition rate, Age 2 to 3* at 0.3. NOTE: these transition rates could also be called "survival rates"    
+- For recruitment, set *Recruitment rate, age 2* at 1.2 and *Recruitment rate, age 3* at 1.7.    
+- For transition rates, set *Transition rate, Age 1 to 2* at 0.5 and *Transition rate, Age 2 to 3* at 0.3. NOTE: these transition rates could also be called "survival rates"    
 - For the mortality rates, note that all individuals in the *Age 1* stock must either transition to *Age 2* or die (mortality rates are 1 minus the corresponding transition rate). In addition, all individuals in the *Age 3* stock must die- there is no *Age 4* class! 
 
 2a. Translate this InsightMaker model into a projection matrix. This shouldn't be too difficult, but pay close attention to the difference between survival (transition to the next stage class) and mortality. In your write-up please provide your transition matrix.   
 
-2b. Starting with 75 individuals, all in Age class 1, project the population 20 years into the future, using both InsightMaker and R. *You don't need to show your R code or the InsightMaker model this time*- just provide graphical evidence (that is, provide two plots- one showing the results of the R simulation and the other showing the results of the InsightMaker simulation). These plots should look essentially the same! 
+2b. Starting with 75 individuals, all in Age class 1, project the population 20 years into the future, using both InsightMaker and R. *You don't need to show your R code or the InsightMaker model this time*- just provide graphical evidence (that is, provide two plots- one showing the results of the R simulation and the other showing the results of the InsightMaker simulation). These plots should look essentially identical! 
 
 
 Now let's go the other way around -- try to build an InsightMaker model based on a population matrix!
@@ -294,7 +296,7 @@ stmat
 
 2d. Use this stage matrix to project the population 20 years into the future, starting with 100 individuals at S.A.D. No need to show your R code- simply provide a plot of projected abundance of each stage over the 20 year simulation. Do the same in InsightMaker (project the population 20 years into the future), and make sure the population dynamics look the same in R and InsightMaker. Provide both the InsightMaker and R plots to show that the two models are identical.    
 
-NOTE: In this class we have stressed the importance of density dependence in determining and regulating the dynamics of wild populations. Were any of the population models in this lab density-dependent? NO!
+NOTE: In this class we have stressed the importance of density dependence in determining and regulating the dynamics of wild populations. Were any of the population models in this lab density-dependent? [Answer: NO!]
 
 #### EXTRA CREDIT question:
 
@@ -324,11 +326,11 @@ As a test of your understanding, try to implement the following passage as a mat
 
 ##Checklist for Lab 4 completion
 
-* Please submit all responses _using the WebCampus quiz_!
+* Please submit all responses _using Top Hat_!
 
-* As always, URLs for your InsightMaker models should be pasted in your lab submission (MS Word document). See details below...  
+* As always, URLs for your InsightMaker models should be pasted in your lab submission (in Top Hat). See details below...  
 
-***Due Mar. 13 at midnight***
+***Due Mar. 19 at 11:55pm***
 
 *  Word document with short answers
     +  **Exercise 1**
