--- a/EXTRA_CREDIT.Rmd
+++ b/EXTRA_CREDIT.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Extra credit options"
 author: "NRES 470/670"
-date: "Spring 2020"
+date: "Spring 2021"
 output: 
   html_document: 
     theme: spacelab
@@ -17,7 +17,7 @@ You may submit up to four extra credit essays -- a maximum of two of each of the
 
 ## Extra Credit Option 1 -- Journal Article Response
 
-#### Total points possible: 10
+#### Total points possible: 10 (up to two submissions)
 
 **Due at the end of finals period**
 
@@ -42,11 +42,11 @@ Select a *peer-reviewed journal article* on a topic _relevant to population ecol
       - Identify **how the research was applied** to a particular conservation or management issue, and describe the relationship between the research and the contents of this course.
       - Provide **your personal response** to the article - why did you choose to read it, what did you like about it, and what did you learn?
       
-Upload your written response and a PDF of the journal article to WebCampus by May 9.
+Upload your written response and a PDF of the journal article to WebCampus.
 
 ## Extra Credit Option #2 – Population Ecology Talk
 
-#### Total points possible: 10
+#### Total points possible: 10 (up to 2 submissions)
 
 **Due at the end of finals period**
 
@@ -71,7 +71,7 @@ Upload your written response and a PDF of the journal article to WebCampus by Ma
     - What was the **conservation or management issue** that the researcher(s) addressed? What surprising or novel findings did the researcher(s) present?
     - Provide **your personal response** to the talk - why did you choose to attend, and what did you like about it? Was there anything that was unclear or that you would like to learn more about?
 
-Upload your written response to WebCampus by May 9.
+Upload your written response to WebCampus.
 
 
 #### Grading Rubric, option 1:
