--- a/LECTURE12.Rmd
+++ b/LECTURE12.Rmd
@@ -148,7 +148,7 @@ There are two types of data analysis tools that you will need to be able to use 
 These tools- visualization and statistical analysis - are diverse, and there is no one-size-fits-all way that you should visualize and analyze your simulation results. It really depends on your question!! 
 
 I will give you some ideas here about graphical representations in the demo PVA - but just remember you are not limited to these ideas- be creative! 
-Since this class is not a statistics class, I don't necessarily expect you to do sophisticated stats as part of your project- but Megan and I can work with your groups individually to figure out some simple stats that make sense for your project. 
+Since this class is not a statistics class, I don't necessarily expect you to do sophisticated stats as part of your project- but your TAs and I can work with your groups individually to figure out some simple stats that make sense for your project. 
 
 ## A Simple Demonstration PVA
 
