--- a/LECTURE13.Rmd
+++ b/LECTURE13.Rmd
@@ -172,27 +172,35 @@ In the classical metapopulation models, we assumed a very large number of patche
 
 Let's consider a system in which a species occupies a single patch, and there is a probability of extinction $p_e$ of 0.15 per patch per year. 
 
-**Q**: What is the probability of regional extinction after 10 years? 
+**Q**: What is the probability of regional extinction sometime in the next 10 years? 
 
 The probability of persistence for 1 year is $1-p_e$, so the probability of persistence for 10 years is $(1-p_e)^{10}$ and the probability of regional extinction is $1-((1-p_e)^{10})$
 
-which works out to be about 80%. There is a substantial probability of regional extinction over 10 years!
+which works out to be about 80%. There is a substantial probability of regional extinction sometime over the next 10 years!
 
 What if there were two patches instead of just one? 
 
 Let's assume that the extinction risk for the two patches are **independent** -- that is, the extinction of one patch doesn't influence whether or not the other patch goes extinct!
 
-Regional extirpation therefore depends upon both populations going extinct- which can be computed as $p_e^2$. So the probability of persistence for one year is $1-p_e^2$. The probability of persisting for 10 years is $(1-p_e^2)^{10}$. Finally, the probability of regional extinction is $1-((1-p_e^2)^{10})$. 
+If the probability of extinction of one patch over the next 10 years is 0.8, then the probability of both patches going extinct sometime over the next 10 years is 0.8*0.8 = 0.64 
 
-Which works out to about 20%. So the chance of regional extirpation is much reduced now!!
+So the chance of regional extirpation is somewhat reduced with two populations!!
 
 This is an example of **spreading the risk**. 
 
 What if there are 5 independent populations instead of two? Then what is the chance of regional extirpation over 10 years?
 
-$(1-p_e^5)^{10}$ 
+$[1-(1-p_e)^{10}]^5$ 
 
-_This works out to be effectively zero!!!_
+_This works out to be around 33%_
+
+What if there are 15 independent populations instead of five? Then what is the chance of regional extirpation over 10 years?
+
+$[1-(1-p_e)^{10}]^5$ 
+
+_This works out to be around 3% -- we have effectively spread out the risk, so that despite a relatively high extinction risk at the patch level, the metapopulation is unlikely to experience global extinction_
+
+**Q**: if we included dispersal among patches, would dispersal serve to further reduce the risk of global extinction? Why or why not? 
 
 **Q**: What if the extinction of one patch was *perfectly correlated* with the extinction of all other patches. If one goes extinct, all go extinct. [tophat] 
 
