--- a/LECTURE13.Rmd
+++ b/LECTURE13.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 
 ### Upcoming midterm exam
 
-**when and where** The second midterm exam (out of two) is coming up on **April 14**. You will have the whole 50 minute class period to take the exam. We will use the same format as the first midterm. 
+**when and where** The second midterm exam (out of two) is coming up on **April 19**. You will have the whole 50 minute class period to take the exam. We will use the same format as the first midterm. 
 
 **what** The exam will cover:
 
@@ -27,9 +27,9 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
     
 *The exam will consist of a mixture of multiple-choice and short-answer questions.*  
 
-I will host a review session via zoom on Monday April 13 at 5pm. See the zoom tab on webcampus for details.  
+I will host a review session via zoom on Wed April 14 during our regular class time. 
 
-Finally, don't forget that lab 5 (stochasticity) is due at the end of this week -- Friday, April 10 -- along with your PVA models and justifications.
+Finally, don't forget that lab 5 (stochasticity) is due at the end of this week -- Friday, April 9 -- along with your PVA models and justifications.
 
 ## Metapopulations
 
